# mlops-telco-churn

./: .dockerignore  .gitignore  LICENSE  Makefile  pyproject.toml  run_pipeline.py
docker/: Dockerfile
models/: adaboost_model.py  evaluations_utils.py  inference.py  logreg_model.py  xgboost_model.py
notebooks/: logreg_pipeline_test.py
src/data/: file_tracker.py  preprocessing.py
